--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tracing = { version = "0.1", features = [
     "release_max_level_warn",
 ] }
 avian2d = "0.3.0"
+bevy-inspector-egui = { version = "0.31.0", optional = true }
 
 
 # Your web builds will start failing if you add a dependency that pulls in `getrandom` v0.3+.
@@ -42,6 +43,7 @@ dev = [
     "bevy/bevy_ui_debug",
     # Improve error messages coming from Bevy
     "bevy/track_location",
+    "bevy-inspector-egui",
 ]
 dev_native = [
     "dev",
@@ -94,10 +96,6 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
-
-# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
-[profile.dev.package.wgpu-types]
-debug-assertions = false
 
 [profile.release]
 # Compile the entire crate as one unit.
