--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tracing = { version = "0.1", features = [
 ] }
 avian2d = "0.3.0"
 bevy-inspector-egui = { version = "0.31.0", optional = true }
+bevy_mod_imgui = "0.7.0"
 
 
 # Your web builds will start failing if you add a dependency that pulls in `getrandom` v0.3+.
