--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,8 +2,10 @@ name: Release
 
 on:
   push:
-    tags:
-      - "*"
+    branches:
+      - release
+    # tags:
+    #   - "*"
 
 env:
   # update with the name of the main binary
