--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16", features = ["wayland"] }
-rand = "0.8"
+rand = "0.8.0"
 # Compile low-severity logs out of native builds for performance.
 log = { version = "0.4", features = [
     "max_level_debug",
@@ -19,7 +19,7 @@ tracing = { version = "0.1", features = [
 ] }
 avian2d = "0.3.0"
 bevy-inspector-egui = { version = "0.31.0", optional = true }
-
+statrs =  "0.18.0"
 
 # Your web builds will start failing if you add a dependency that pulls in `getrandom` v0.3+.
 # To fix this, you should tell `getrandom` to use the `wasm_js` backend on Wasm.
